<resources>
    <string name="app_name">PaintTheTown</string>
    <!-- Strings related to creating account and login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="already_have_account">Already have an account? Log in.</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="paint_the_town">Paint the Town</string>
    <string name="write_review">Review</string>
    <string name="no_reviews_yet">There are no reviews yet.</string>
    <string name="login">login</string>
    <string name="close_review">Close</string>
    <string name="sign_up">sign up</string>
    <string name="create_an_account">Create an Account</string>
    <string name="username">Username</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="register_account">Register Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="logout">logout</string>
    <string name="pending_invites_tab">Pending event invites</string>
    <string name="events_tab">Events</string>
    <string name="event_people">People</string>
    <string name="event_locations">Places</string>
    <string name="invite_friends">Invite</string>
    <string name="recover_account_button">Recover my account</string>
    <string name="recover_account"> Forgot your password?</string>
    <string name="account_does_not_exist"> Don\'t have an account? Sign up. </string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="editInfo">Edit</string>
    <string name="saveInfo">Save</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="next">NEXT</string>
    <string name="no_pending_requests">No pending requests…</string>
    <string name="back_button_dec">back button</string>
    <string name="searchbtn">searchbtn</string>
    <string name="city_state">City, State</string>
    <string name="search">Search</string>
    <string name="add_to_event">Add to event</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="cancel_invite">Cancel</string>
    <string name="send_invite">Send Invite</string>
    <string name="invite_sent_confirmation">Invitations sent! Let\'s get the party started!</string>
    <string name="invite_friends_to_join_the_event">Invite friends to join the event!</string>
    <string name="no_pending_invites">No pending invites…</string>
    <string name="deleteinvite">deleteInvite</string>
    <string name="acceptinvite">acceptInvite</string>
    <string name="eventview">eventView</string>
    <string name="icon">icon</string>
    <string name="select_the_event_you_d_like_to_add_this_location_to">Select the event you\'d like to add this location to.</string>
    <string name="select_time">Select Time</string>
    <string name="event_name">Event Name</string>
    <string name="event_info">Event Info</string>
    <string name="select_date">Select Date</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="event">Event</string>
    <string name="success">Success</string>
    <string name="event_date">Event Date</string>
    <string name="event_location">Event Location</string>
    <string name="event_time">Event Time</string>
    <string name="no_results_found">No results found</string>
    <string name="rate_this_location">Rate this location!</string>
    <string name="write_a_review">Write a review</string>
    <string name="post">Post</string>
    <string name="logo">logo</string>
    <string name="menu_header">menu header</string>
    <string name="name">Name</string>
    <string name="upload_picture">upload picture</string>
    <string name="create_event">Create Event</string>
    <string name="create_an_event">Create an Event</string>
    <string name="event_picture">event picture</string>
    <string name="loading">Loading…</string>
    <string name="location_image">location image</string>
    <string name="user_image">user image</string>
    <string name="phone">phone</string>
    <string name="add_friend">Add Friend</string>
    <string name="remove_friend">Remove Friend</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="events">Events</string>
    <string name="view_past_events">View Past Events</string>
    <string name="friends">Friends</string>
    <string name="pending_requests">Pending Requests</string>
</resources>