<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />
    <item
        android:id="@+id/account"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/account" />
    <item
        android:id="@+id/createEvent"
        android:icon="@drawable/createvent"
        android:title="@string/create_an_event" />
    <item
        android:id="@+id/events"
        android:icon="@drawable/ic_baseline_event_24"
        android:title="@string/events" />
    <item
        android:id="@+id/pastEvents"
        android:icon="@drawable/ic_baseline_event_24"
        android:title="@string/view_past_events" />
    <item
        android:id="@+id/friends"
        android:icon="@drawable/ic_baseline_emoji_people_24"
        android:title="@string/friends" />
    <item
        android:id="@+id/pending_requests"
        android:icon="@drawable/pending_friend"
        android:title="@string/pending_requests" />
    <item
        android:id="@+id/logout"
        android:icon="@drawable/logout"
        android:title="@string/logout" />
</menu>