<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FriendPopUpActivity">

    <ImageView
        android:id="@+id/profile_view_img"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:baselineAligned="false"
        app:layout_constraintEnd_toStartOf="@+id/profile_view_fn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_account_circle_24"
        android:contentDescription="@string/user_image" />

    <TextView
        android:id="@+id/profile_view_fn"
        android:layout_width="80dp"
        android:layout_height="42dp"
        android:layout_marginBottom="23dp"
        android:text="@string/first_name"
        app:layout_constraintBottom_toTopOf="@+id/profile_view_username"
        app:layout_constraintEnd_toStartOf="@+id/profile_view_ln"
        app:layout_constraintStart_toEndOf="@+id/profile_view_img"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/profile_view_ln"
        android:layout_width="80dp"
        android:layout_height="42dp"
        android:layout_marginBottom="23dp"
        android:text="@string/last_name"
        app:layout_constraintBottom_toTopOf="@+id/profile_view_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profile_view_fn"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_view_username"
        android:layout_width="150dp"
        android:layout_height="53dp"
        android:layout_marginTop="65dp"
        android:layout_marginBottom="606dp"
        android:text="@string/username"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profile_view_img"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/profile_view_remove"
        android:layout_width="125dp"
        android:layout_height="99dp"
        android:layout_marginStart="134dp"
        android:layout_marginLeft="134dp"
        android:layout_marginTop="378dp"
        android:layout_marginEnd="152dp"
        android:layout_marginRight="152dp"
        android:layout_marginBottom="253dp"
        android:text="@string/remove_friend"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>
