<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileViewActivity"
    android:background="#ffffff">

    <ImageView
        android:id="@+id/profile_view_img"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="90dp"
        android:baselineAligned="false"
        app:layout_constraintEnd_toStartOf="@+id/profile_view_fn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_account_circle_24"
        android:contentDescription="@string/user_image" />

    <TextView
        android:id="@+id/profile_view_fn"
        android:layout_width="80dp"
        android:layout_height="42dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="32dp"
        android:text="@string/first_name"
        app:layout_constraintEnd_toStartOf="@+id/profile_view_ln"
        app:layout_constraintStart_toEndOf="@+id/profile_view_img"
        app:layout_constraintTop_toBottomOf="@+id/profile_view_username" />

    <TextView
        android:id="@+id/profile_view_ln"
        android:layout_width="80dp"
        android:layout_height="42dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="32dp"
        android:text="@string/last_name"
        app:layout_constraintStart_toEndOf="@+id/profile_view_fn"
        app:layout_constraintTop_toBottomOf="@+id/profile_view_username" />

    <TextView
        android:id="@+id/profile_view_username"
        android:layout_width="150dp"
        android:layout_height="53dp"
        android:layout_marginTop="90dp"
        android:layout_marginBottom="606dp"
        android:text="@string/username"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.208"
        app:layout_constraintStart_toEndOf="@+id/profile_view_img"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/profile_view_add"
        android:layout_width="125dp"
        android:layout_height="99dp"
        android:layout_marginTop="378dp"
        android:layout_marginEnd="128dp"
        android:layout_marginRight="128dp"
        android:layout_marginBottom="253dp"
        android:background="#627FE4"
        android:textColor="#FFFFFF"
        android:text="@string/add_friend"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>
